# shn736_project1

./: README.md  main.py  pyproject.toml
data/: transactions_excel.xls
src/: bank_operations.py  counting_transactions.py  decorators.py  external_api.py  generators.py  main.py  masks.py  processing.py  reading_operations.py  utils.py  widget.py
tests/: test_bahk_operations.py  test_counting_trasactions.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_reading_operations.py  test_utils.py  test_widget.py  tests_masks.py  tests_processing.py  tests_widget.py
