[project]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = [
    {name = "shn73",email = "shn-73@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "package-name (>=0.1,<0.2)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"

[tool.black]
line-length = 119
exclude = '(\.git)'

[tool.isort]
line-length = 119

[tool.mypy]
disallow_untyped_defs=true
warn_return_any=true
exclude = 'venv'
